# colombia-employment-factors

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/audit/: Employment_Factors_graphs.xlsx  capex_opex_ratios_2024_2030_2050.csv  employment_learning_curves_2030_2050.xlsx
data/processed/: employment_factors_with_2030_2050.csv
data/raw/: employment_factors_final.csv  employment_factors_input.csv
docs/: colombia_employment_factors_methodology.pptx
docs/sources/: datos_cuantitativos_EN.xlsx
scripts/: build_employment_factors.py  create_methodology_deck.py
src/colombia_employment_factors/: __init__.py  employment_factors.py  learning.py  mappings.py  projections.py  technology_assumptions.py  yearly.py
src/colombia_employment_factors/adapters/: __init__.py  osemosys.py
src/colombia_employment_factors/data/: __init__.py  employment_factors_model_default_2024_2055.csv  employment_factors_with_2030_2050.csv  employment_factors_yearly_2024_2055.csv  technology_assumptions_2024.csv
tests/: test_employment_factors.py  test_learning.py  test_osemosys_adapter.py  test_projections.py  test_yearly.py
