[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colombia-employment-factors"
version = "0.1.0"
description = "Employment-factor data and CAPEX/OPEX ratio projections for Colombia power-sector models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "UPME-SubDemanda collaborators" }
]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colombia_employment_factors = ["data/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
